Update and rename 3.9/Dockerfile.webapp.slim to 3.9/webapp/slim/Dockerfile

--- a/3.9/webapp/slim/Dockerfile
+++ b/3.9/webapp/slim/Dockerfile
@@ -7,3 +7,6 @@ RUN apt-get update && \
     python3-setuptools \
     gcc \
     make
+
+RUN apt-get autoremove -y \
+    && rm -rf /var/lib/apt/lists/*
