--- a/3.9/webapp/slim/Dockerfile
+++ b/3.9/webapp/slim/Dockerfile
@@ -1,5 +1,6 @@
 FROM python:3.9-slim
 
+# Update and install defaults
 RUN apt-get update && \
     apt-get install -y \
     build-essential \
@@ -8,5 +9,9 @@ RUN apt-get update && \
     gcc \
     make
 
+# Create a virtual environment in /opt
+RUN python3 -m venv /opt/venv
+
+# Autoremove unecessary files
 RUN apt-get autoremove -y \
     && rm -rf /var/lib/apt/lists/*
